--- a/src/settings.ui
+++ b/src/settings.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>433</width>
-    <height>902</height>
+    <height>921</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -30,7 +30,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="tabWindow">
       <property name="toolTip">
@@ -1981,93 +1981,187 @@
           </widget>
          </item>
          <item row="18" column="0">
+          <widget class="QLabel" name="label_66">
+           <property name="text">
+            <string>Space width</string>
+           </property>
+          </widget>
+         </item>
+         <item row="18" column="1">
+          <widget class="QSpinBox" name="sbSpaceWidth">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <number>10</number>
+           </property>
+           <property name="maximum">
+            <number>500</number>
+           </property>
+           <property name="singleStep">
+            <number>5</number>
+           </property>
+           <property name="value">
+            <number>100</number>
+           </property>
+          </widget>
+         </item>
+         <item row="19" column="0">
           <widget class="QLabel" name="label_15">
            <property name="text">
             <string>Min space width</string>
            </property>
           </widget>
          </item>
-         <item row="18" column="1">
-          <widget class="QComboBox" name="cbMinSpaceWidth"/>
+         <item row="19" column="1">
+          <widget class="QSpinBox" name="sbMinSpaceWidth">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <number>25</number>
+           </property>
+           <property name="maximum">
+            <number>100</number>
+           </property>
+           <property name="singleStep">
+            <number>5</number>
+           </property>
+           <property name="value">
+            <number>70</number>
+           </property>
+          </widget>
          </item>
-         <item row="19" column="0">
+         <item row="20" column="0">
+          <widget class="QLabel" name="label_68">
+           <property name="text">
+            <string>Max extra letter spacing</string>
+           </property>
+          </widget>
+         </item>
+         <item row="20" column="1">
+          <widget class="QSpinBox" name="sbMaxLetterSpacing">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <number>0</number>
+           </property>
+           <property name="maximum">
+            <number>20</number>
+           </property>
+           <property name="singleStep">
+            <number>1</number>
+           </property>
+           <property name="value">
+            <number>0</number>
+           </property>
+          </widget>
+         </item>
+         <item row="21" column="0">
+          <widget class="QLabel" name="label_67">
+           <property name="text">
+            <string>Unused space threshold</string>
+           </property>
+          </widget>
+         </item>
+         <item row="21" column="1">
+          <widget class="QSpinBox" name="sbUnusedSpaceThreshold">
+           <property name="suffix">
+            <string>%</string>
+           </property>
+           <property name="minimum">
+            <number>0</number>
+           </property>
+           <property name="maximum">
+            <number>20</number>
+           </property>
+           <property name="singleStep">
+            <number>1</number>
+           </property>
+           <property name="value">
+            <number>5</number>
+           </property>
+          </widget>
+         </item>
+         <item row="22" column="0">
           <widget class="QLabel" name="label_43">
            <property name="text">
             <string>Font kerning</string>
            </property>
           </widget>
          </item>
-         <item row="19" column="1">
+         <item row="22" column="1">
           <widget class="QCheckBox" name="cbFontKerning">
            <property name="text">
             <string>Enable font kerning</string>
            </property>
           </widget>
          </item>
-         <item row="20" column="0">
+         <item row="23" column="0">
           <widget class="QLabel" name="label_18">
            <property name="text">
             <string>Floating punctuation</string>
            </property>
           </widget>
          </item>
-         <item row="20" column="1">
+         <item row="23" column="1">
           <widget class="QCheckBox" name="cbFloatingPunctuation">
            <property name="text">
             <string>Enable floating punctuation</string>
            </property>
           </widget>
          </item>
-         <item row="21" column="0">
+         <item row="24" column="0">
           <widget class="QLabel" name="label_38">
            <property name="text">
             <string>Internal CSS</string>
            </property>
           </widget>
          </item>
-         <item row="21" column="1">
+         <item row="24" column="1">
           <widget class="QCheckBox" name="cbEnableDocumentStyles">
            <property name="text">
             <string>Enable document internal styles</string>
            </property>
           </widget>
          </item>
-         <item row="22" column="0">
+         <item row="25" column="0">
           <widget class="QLabel" name="label_37">
            <property name="text">
             <string>.EPUB</string>
            </property>
           </widget>
          </item>
-         <item row="22" column="1">
+         <item row="25" column="1">
           <widget class="QCheckBox" name="cbEnableEmbeddedFonts">
            <property name="text">
             <string>Enable document embedded fonts</string>
            </property>
           </widget>
          </item>
-         <item row="23" column="0">
+         <item row="26" column="0">
           <widget class="QLabel" name="label_49">
            <property name="text">
             <string>Margins redefine</string>
            </property>
           </widget>
          </item>
-         <item row="23" column="1">
+         <item row="26" column="1">
           <widget class="QCheckBox" name="cbIgnoreDocumentMargins">
            <property name="text">
             <string>Ignore document margins</string>
            </property>
           </widget>
          </item>
-         <item row="24" column="0">
+         <item row="27" column="0">
           <widget class="QLabel" name="label_17">
            <property name="text">
             <string>.TXT files</string>
            </property>
           </widget>
          </item>
-         <item row="24" column="1">
+         <item row="27" column="1">
           <widget class="QCheckBox" name="cbTxtPreFormatted">
            <property name="text">
             <string>Disable automatic formatting</string>
@@ -2134,7 +2228,7 @@
               <x>0</x>
               <y>0</y>
               <width>389</width>
-              <height>772</height>
+              <height>791</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_9">
@@ -2394,7 +2488,10 @@
   <tabstop>cbHyphenation</tabstop>
   <tabstop>cbFontShaping</tabstop>
   <tabstop>sbInterlineSpace</tabstop>
-  <tabstop>cbMinSpaceWidth</tabstop>
+  <tabstop>sbSpaceWidth</tabstop>
+  <tabstop>sbMinSpaceWidth</tabstop>
+  <tabstop>sbMaxLetterSpacing</tabstop>
+  <tabstop>sbUnusedSpaceThreshold</tabstop>
   <tabstop>cbFontKerning</tabstop>
   <tabstop>cbFloatingPunctuation</tabstop>
   <tabstop>cbEnableDocumentStyles</tabstop>
