--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>746</width>
-    <height>938</height>
+    <height>968</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -406,55 +406,6 @@
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="pageRangeGroup">
-          <property name="title">
-           <string>Page Range</string>
-          </property>
-          <layout class="QFormLayout" name="pageRangeLayout">
-           <item row="0" column="0">
-            <widget class="QLabel" name="lblFromPage">
-             <property name="text">
-              <string>From page:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QSpinBox" name="sbFromPage">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>9999</number>
-             </property>
-             <property name="value">
-              <number>1</number>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="lblToPage">
-             <property name="text">
-              <string>To page:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="sbToPage">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>9999</number>
-             </property>
-             <property name="value">
-              <number>1</number>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item>
          <widget class="QGroupBox" name="chaptersGroup">
           <property name="title">
            <string>Chapters</string>
@@ -537,6 +488,55 @@
            </item>
            <item row="1" column="1">
             <widget class="QLineEdit" name="leAuthor"/>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="pageRangeGroup">
+          <property name="title">
+           <string>Page Range</string>
+          </property>
+          <layout class="QFormLayout" name="pageRangeLayout">
+           <item row="0" column="0">
+            <widget class="QLabel" name="lblFromPage">
+             <property name="text">
+              <string>From page:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QSpinBox" name="sbFromPage">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>9999</number>
+             </property>
+             <property name="value">
+              <number>1</number>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="lblToPage">
+             <property name="text">
+              <string>To page:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="sbToPage">
+             <property name="minimum">
+              <number>1</number>
+             </property>
+             <property name="maximum">
+              <number>9999</number>
+             </property>
+             <property name="value">
+              <number>1</number>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -990,14 +990,14 @@
        <layout class="QHBoxLayout" name="sourceLayout">
         <item>
          <widget class="QLabel" name="lblSource">
-          <property name="visible">
-           <bool>false</bool>
-          </property>
           <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
+          </property>
+          <property name="visible">
+           <bool>false</bool>
           </property>
           <property name="text">
            <string>Source:</string>
@@ -1016,6 +1016,12 @@
         </item>
         <item>
          <widget class="QPushButton" name="btnBrowseSource">
+          <property name="minimumSize">
+           <size>
+            <width>60</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="visible">
            <bool>false</bool>
           </property>
@@ -1050,6 +1056,12 @@
         </item>
         <item>
          <widget class="QPushButton" name="btnBrowse">
+          <property name="minimumSize">
+           <size>
+            <width>60</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
@@ -1061,14 +1073,14 @@
        <layout class="QHBoxLayout" name="filesProgressLayout">
         <item>
          <widget class="QLabel" name="lblFilesProgress">
-          <property name="visible">
-           <bool>false</bool>
-          </property>
           <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
+          </property>
+          <property name="visible">
+           <bool>false</bool>
           </property>
           <property name="text">
            <string>Files:</string>
@@ -1077,20 +1089,39 @@
         </item>
         <item>
          <widget class="QProgressBar" name="progressBarFiles">
-          <property name="visible">
-           <bool>false</bool>
-          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>1</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="visible">
+           <bool>false</bool>
+          </property>
           <property name="value">
            <number>0</number>
           </property>
-          <property name="format">
-           <string>%v/%m</string>
+          <property name="textVisible">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="lblFilesCount">
+          <property name="minimumSize">
+           <size>
+            <width>60</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="visible">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>0/0</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
           </property>
          </widget>
         </item>
@@ -1100,14 +1131,14 @@
        <layout class="QHBoxLayout" name="currentProgressLayout">
         <item>
          <widget class="QLabel" name="lblCurrentProgress">
-          <property name="visible">
-           <bool>false</bool>
-          </property>
           <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
+          </property>
+          <property name="visible">
+           <bool>false</bool>
           </property>
           <property name="text">
            <string>Current:</string>
@@ -1116,17 +1147,39 @@
         </item>
         <item>
          <widget class="QProgressBar" name="progressBar">
-          <property name="visible">
-           <bool>false</bool>
-          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>1</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="visible">
+           <bool>false</bool>
+          </property>
           <property name="value">
            <number>0</number>
+          </property>
+          <property name="textVisible">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="lblCurrentPercent">
+          <property name="minimumSize">
+           <size>
+            <width>60</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="visible">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>0%</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
           </property>
          </widget>
         </item>
