--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -656,7 +656,7 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>50</width>
+              <width>40</width>
               <height>0</height>
              </size>
             </property>
@@ -684,7 +684,7 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>50</width>
+              <width>40</width>
               <height>0</height>
              </size>
             </property>
@@ -704,6 +704,12 @@
           </item>
           <item>
            <widget class="QSpinBox" name="sbPreviewPage">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="minimum">
              <number>1</number>
             </property>
@@ -726,6 +732,9 @@
             <property name="text">
              <string>/ 1</string>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
+            </property>
            </widget>
           </item>
           <item>
@@ -738,7 +747,7 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>50</width>
+              <width>40</width>
               <height>0</height>
              </size>
             </property>
@@ -766,7 +775,7 @@
             </property>
             <property name="minimumSize">
              <size>
-              <width>50</width>
+              <width>40</width>
               <height>0</height>
              </size>
             </property>
