feat(export): add inverse mode option to export dialog
Add checkbox to swap document text and background colors for export.
- Checkbox placed on mode row alongside Single File/Batch Export
- Setting persisted in crui.ini as xtexport.inverse
- Colors restored when dialog closes
- Works in both single file and batch export modes

--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -861,11 +861,18 @@
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>40</width>
+              <width>20</width>
               <height>20</height>
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="cbInverse">
+            <property name="text">
+             <string>Inverse</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
