refactor(export): rename Inverse to Invert for UI consistency
Renamed checkbox, slot, and related functions from "Inverse" to "Invert"
to follow standard software UI conventions. Also updated the settings
key from "xtexport.inverse" to "xtexport.invert".

--- a/src/xtexportdlg.ui
+++ b/src/xtexportdlg.ui
@@ -868,9 +868,9 @@
            </spacer>
           </item>
           <item>
-           <widget class="QCheckBox" name="cbInverse">
+           <widget class="QCheckBox" name="cbInvert">
             <property name="text">
-             <string>Inverse</string>
+             <string>Invert</string>
             </property>
            </widget>
           </item>
