feat(crqt-ng): add inline-block footnotes UI option
- Add "Inline Block" option to footnotes mode combo in settings
- Add "Override: 100%" font-size option

--- a/src/settings.ui
+++ b/src/settings.ui
@@ -1092,6 +1092,11 @@
                  <string>Inline</string>
                 </property>
                </item>
+               <item>
+                <property name="text">
+                 <string>Inline Block</string>
+                </property>
+               </item>
               </widget>
              </item>
              <item row="1" column="0">
